[package]
name          = "alap"
version       = "0.1.0"
edition       = "2024"
description   = "Alap expression parser — resolve tag-based link expressions server-side"
authors       = ["Daniel Smith"]
license       = "Apache-2.0"
readme        = "README.md"
keywords      = ["alap", "expression", "parser", "links", "menu"]
categories    = ["parser-implementations", "web-programming"]
repository    = "https://github.com/DanielSmith/alap-rust"
homepage      = "https://alap.info"
documentation = "https://docs.rs/alap"

[dependencies]
regex      = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
